--- a/page/templates/base.html
+++ b/page/templates/base.html
@@ -1,6 +1,3 @@
-{% extends 'base.html' %}
-{% load static %}
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -8,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Likelion Camp</title>
 </head>
-{% block content%}
 <body>
-    <h1>Likelion Camp</h1>
+    <h1>Base.html</h1><hr>
+
+    {% block content %}
+    
+    {% endblock%}
 </body>
-{% endblock %}
 </html>
