--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -10,10 +10,8 @@
 </head>
 {% block content%}
 <body>
-    <h1>Likelion Camp</h1> 
-    <a href="{%url 'login'%}" id="login">로그인</a>
-    <a href="{%url 'homeworklist'%}" id="homeworklist">과제 제출</a>
-    <a href="{%url 'QnA'%}" id="QnA">Q&A</a>
+    <h1>로그인</h1>
+    <a href="{%url 'register'%}" id="register">회원 가입</a>
 </body>
 {% endblock %}
 
