--- a/page/templates/base.html
+++ b/page/templates/base.html
@@ -13,7 +13,7 @@
 <body>
 {#    <h1>Base.html</h1><hr>#}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">LikeLionCamp</a>
+        <a class="navbar-brand" href="{% url 'home' %}">LikeLionCamp</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
