--- a/.static/admin/css/login.css
+++ b/.static/admin/css/login.css
@@ -1,8 +1,13 @@
-/* LOGIN FORM */
+@import url(http://weloveiconfonts.com/api/?family=entypo);
+@import url(https://fonts.googleapis.com/css?family=Roboto);
 
-body.login {
-    background: #f8f8f8;
-}
+
+/* LOGIN FORM */
+body {
+    background: #272125;
+    font-family: 'Roboto', sans-serif;  
+  }
+
 
 .login #header {
     height: auto;
@@ -77,3 +82,62 @@ body.login {
 .login .password-reset-link {
     text-align: center;
 }
+
+
+[class*="entypo-"]:before {
+    font-family: 'entypo', sans-serif;
+  }
+  
+  *,
+  *:before,
+  *:after {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box; 
+  }
+
+  h2 {
+    color:rgba(255,255,255,.8);
+    margin-left:12px;
+  }
+
+  input {
+    padding: 16px;
+    border-radius:7px;
+    border:0px;
+    background: rgba(255,255,255,.2);
+    display: block;
+    margin: 15px;
+    width: 300px;  
+    color:white;
+    font-size:18px;
+    height: 54px;
+  }
+  
+  input:focus {
+    outline-color: rgba(0,0,0,0);
+    background: rgba(255,255,255,.95);
+    color: #e74c3c;
+  }
+
+  .inputUserIcon {
+    position:absolute;
+    top:68px;
+    right: 80px;
+    color:white;
+  }
+  
+  .inputPassIcon {
+    position:absolute;
+    top:136px;
+    right: 80px;
+    color:white;
+  }
+
+  input::-webkit-input-placeholder {
+    color: white;
+  }
+  
+  input:focus::-webkit-input-placeholder {
+    color: #e74c3c;
+  }
