--- a/page/templates/home.html
+++ b/page/templates/home.html
@@ -6,6 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link ref="stylesheet" href="{% static '.static\admin\css\home.css'%}">
     <title>Likelion Camp</title>
 </head>
 {% block content%}
