add parallax related files(html, css, js) and modified url.py,views.py

--- a/page/templates/home.html
+++ b/page/templates/home.html
@@ -14,6 +14,7 @@
     <a href="{%url 'login'%}" id="login">로그인</a>
     <a href="{%url 'homeworklist'%}" id="homeworklist">과제 제출</a>
     <a href="{%url 'QnA'%}" id="QnA">Q&A</a>
+    <a href="{%url 'parallax'%}" id="parallax">testing parallax</a>
 </body>
 {% endblock %}
 
