--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-{% load static %}
+
+{% load staticfiles %}
 
 <!DOCTYPE html>
 <html lang="ko">
@@ -7,11 +8,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{% staitc 'account\static\account\css\login.css' %}">
     <title>Likelion Camp</title>
-    {% block link %}
-        {% static '.static\admin\css\login.css' %}
-    {% endblock %}
-    <script src="{% static '.static\admin\js\login.js' %}" type="text/javascript"></script>
 </head>
 
 {% block content %}
