--- a/account/static/account/css/login.css
+++ b/account/static/account/css/login.css
@@ -2,3 +2,7 @@ body {
     background: #272125;
     font-family: 'Roboto', sans-serif;
   }
+h2{
+    font-size: larger;
+    background-color: #1ea623;
+}
