--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -6,22 +6,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Likelion Camp</title>
+    {% block link %}{% static 'account/css/register.css' %}{% endblock %}
+    {% block title %}Likelion Camp{% endblock %}
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 </head>
 {% block content%}
     <body>
-    <h1>회원 가입</h1>
+    <p><span>회원 가입</span></p>
     <div class="panel panel-default registration">
-        <div class="panel-heading">
-            가입하기
-        </div>
+        <div class="panel-heading"></div>
         <div class="panel-body">
             <form action="{% url 'register' %}" method="post">
                 {% csrf_token %}
-                <div>이름 : <input type="text" name="name"/></div>
-                <div>이메일 : <input type="email" name="email"/></div>
-                <div>기수 : <select id="grade" name="grade">
+                <div><h4>이름 </h4><input type="text" name="name"/></div>
+                <div><h4>이메일</h4><input type="email" name="email"/></div>
+                <div><h4>기수</h4> <h8 style="color:rgb(212, 211, 211); font-weight: lighter;">박스를 눌러서 기수를 선택해주세요.</h8>
+                    <select id="grade" name="grade">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -31,8 +31,8 @@
                     <option value="7">7</option>
                     <option value="8">8</option>
                 </select></div>
-                <div>비밀번호 : <input type="password" id="userPw" name="password1"/></div>
-                <div>비밀번호 확인 : <input type="password" id="userPwChk" name="password2"/></div>
+                <div><h4>비밀번호</h4><input type="password" id="userPw" name="password1"/></div>
+                <div><h4>비밀번호 확인</h4><input type="password" id="userPwChk" name="password2"/></div>
                 <span id="chkNotice"></span>
                 <script>
                     $(function(){
@@ -54,7 +54,7 @@
                     });
                 </script>
                 <div class="form-actions">
-                    <button class="btn btn-primary btn-large" type="submit">가입하기</button>
+                    <button class="button" type="submit"> 가입하기</button>
                 </div>
             </form>
         </div>
