--- a/account/templates/activation_alert.html
+++ b/account/templates/activation_alert.html
@@ -10,7 +10,7 @@
 <body>
     {{ name }} 님,<br>
     {{ email }} 으로<br>
-    인증메일을 보내드렸습니다. 확인하시고 인증url을 눌러주십셔
+    인증메일을 보내드렸습니다. 확인하시고 인증url을 눌러주십시오.
 
      <a href="{% url 'home' %}">Home 으로 돌아가기</a>
 
