--- a/page/templates/home.html
+++ b/page/templates/home.html
@@ -7,11 +7,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link ref="stylesheet" href="{% static '.static\admin\css\home.css'%}">
-    <title>Likelion Camp</title>
+    {% block link %}{% static 'page/css/home.css' %}{% endblock %}
+    {% block title %}Likelion Camp{% endblock %}
 </head>
 {% block content%}
 <body>
-    <h1>Likelion Camp</h1> 
+    <h1>LIKELION CAMP</h1>
     <a href="{%url 'login'%}" id="login">로그인</a>
     <a href="{%url 'homeworklist'%}" id="homeworklist">과제 제출</a>
     <a href="{%url 'QnA'%}" id="QnA">Q&A</a>
