--- a/homework/templates/detail.html
+++ b/homework/templates/detail.html
@@ -10,15 +10,11 @@
 </head>
 {% block content%}
 <body>
-    <h1>과제 제출</h1><br>
-    <a href="{%url 'new'%}" id="new">제출하기</a><br><br>
     
-    {% for post in posts.all reversed %}
-    <a href="{%url 'detail' post.id %}">{{post.title}}</a>
-    {{post.pub_date}}
-    <br>
-    {% endfor %}
-   
+    <h2>과제 제목</h2>{{post.title}}<br>
+    
+    <h2>과제 내용</h2>{{post.content}}<br>
+    
 </body>
 {% endblock %}
 
