과제 제출_수정,삭제

--- a/homework/templates/edit.html
+++ b/homework/templates/edit.html
@@ -10,17 +10,20 @@
 </head>
 {% block content%}
 <body>
-    <h2 style="color: red;">과제 제출하기</h2><br>
-    <form action="{% url 'new' %}" method="POST">
+    <h2 style="color: red;">과제 수정하기</h2><br>
+    <form action="{% url 'edit' post.id %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <h3>과제 제목</h3>
-        <input type="text" name='title'>
+        <input type="text" name='title' value={{post.title}}>
         <h3>과제 내용</h3>
-        <textarea name="content" cols="50" rows="10"></textarea>
+        <textarea name="content" cols="50" rows="10">{{post.content}}</textarea>
         <br>
-        <input type="submit" value="제출">
+        <input type="submit" value="수정">
 
     </form>
+
+
+
    
 </body>
 {% endblock %}
