--- a/homework/templates/detail.html
+++ b/homework/templates/detail.html
@@ -14,6 +14,10 @@
     <h2>과제 제목</h2>{{post.title}}<br>
     
     <h2>과제 내용</h2>{{post.content}}<br>
+
+    <a href="{% url 'edit' post.id %}" >수정</a>
+    <a href="{% url 'delete' post.id %}">삭제</a>
+
     
 </body>
 {% endblock %}
