update qna comment

--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -18,13 +18,10 @@
     <span class="entypo-user inputUserIcon"><i class="fa fa-user"></i></span>
     <input type="email" name="email" class="user" placeholder="E-mail Address"/>
     <span class="entypo-key inputPassIcon"><i class="fa fa-key"></i></span>
-    <input type="password" name="password" class="password" placeholder="Password"/></p>
+    <input type="password" name="password" class="password" placeholder="Password"/>
     <input type="submit" value="Login" name="login"/>
-    <a href="{% url 'register' %}" style="text-decoration: none;"><input type="button" value="Join" name="join" >
-
-
-
-  
+    <a href="{% url 'register' %}" style="text-decoration: none;"><input type="button" value="Join" name="join" ></a>
+</form>
 {#    <a href="{%url 'register'%}" id="register">회원 가입</a>#}
 </body>
 {% endblock %}
