update login warning dialog

--- a/page/templates/base.html
+++ b/page/templates/base.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="{% block link %} {% endblock %}">
     <title>{% block title %}{% endblock %}</title>
+    <script>
+        function loginwarning(){
+            alert('로그인 후 이용가능한 서비스입니다');
+        }
+    </script>
 </head>
 <body>
 {#    <h1>Base.html</h1><hr>#}
@@ -18,10 +23,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="{% url 'introduce' %}">Introduce</a>
-                <a class="nav-item nav-link" href="{% url 'homeworklist' %}">Homework</a>
-                <a class="nav-item nav-link" href="{% url 'QnA' %}">QnA</a>
+                {% if user.is_authenticated %}
+                    <a class="nav-item nav-link active" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="{% url 'introduce' %}">Introduce</a>
+                    <a class="nav-item nav-link" href="{% url 'homeworklist' %}">Homework</a>
+                    <a class="nav-item nav-link" href="{% url 'QnA' %}">QnA</a>
+                {% else %}
+                    <a class="nav-item nav-link active" href="" onclick="loginwarning()">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="" onclick="loginwarning()">Introduce</a>
+                    <a class="nav-item nav-link" href="" onclick="loginwarning()">Homework</a>
+                    <a class="nav-item nav-link" href="" onclick="loginwarning()">QnA</a>
+                {% endif %}
+
                 {% if user.is_authenticated %}
                     &nbsp;&nbsp;&nbsp;&nbsp;<label>{{ user.name }}님 환영합니다</label>
                     <a class="nav-item nav-link" name="logincheck" href="{% url 'logout' %}">로그아웃</a>
