--- a/account/templates/activation_email.html
+++ b/account/templates/activation_email.html
@@ -1,2 +1,3 @@
-{{user.name}}님, 아래 링크를 클릭하여 계정을 활성화하세요:
+{{user.name}}님, 안녕하십니까.
+아래 링크를 클릭하여 계정을 활성화해주세요:
 http://{{domain}}{% url 'activate' uid token %}
