--- a/stacklion/static/stacklion/css/QnA.css
+++ b/stacklion/static/stacklion/css/QnA.css
@@ -27,20 +27,55 @@ h1{
 div.question_form{
     margin-left: calc(100%/2.5);
     margin-top: 70px;
+    font-family: 'Noto Sans KR', sans-serif;
 }
 
 div{
     font-family: 'Noto Sans KR', sans-serif;
 }
 
-textarea{
+div.answer_form{
+    margin-left: calc(100%/2.5);
+    margin-top: 20px;
+    width: 350px;
+    border-top: #222 2px solid;
+}
+
+textarea.question{
     border: #E18A07 2px solid ;
     background-color: rgb(248, 214, 163);
     color: black;
+    font-size: small;
 }
 
+input.button{
+    transition:all .3s ease-out; 
+    border: rgb(245, 158, 28) 2px solid ;
+    background-color: rgb(245, 158, 28);
+    border-radius: 15px;
+    box-shadow:
+    1px 1px 0 0 #d98e20,
+    2px 2px 0 0 #d98e20;
+
+
+}
+
+input.button:hover{
+        color:#444;
+}
+input.button.activate{
+        color:#222;
+        box-shadow:inset 0 -4px 0 0 rgba(0,0,0,.2),
+          1px 1px 0 0 #d98e20,
+          2px 2px 0 0 #d98e20,
+          3px 3px 0 0 #d98e20,
+          4px 4px 0 0 #d98e20,
+          5px 5px 0 0 #d98e20;
+}
 
 textarea::-webkit-input-placeholder{
     color:rgba(0, 0, 0, 0.288);
     font-size: small;
 }
+
+
