--- a/stacklion/templates/QnA.html
+++ b/stacklion/templates/QnA.html
@@ -12,8 +12,7 @@
         <script type="text/javascript">
             $(function () {
                 $(".revise").click(function(){
-                    alert("what the fucking hell");
-                    console.log("what?");
+                    console.log($(this).attr("id"));
                 });
             });
         </script>
