update shake effect

--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -28,7 +28,7 @@
                     if($('#userPw').val() != $('#userPwChk').val()){
                         $('#chkNotice').html('비밀번호 일치하지 않음<br><br>');
                         $('#chkNotice').css('color', '#f82a2aa3');
-                        $('.password').effect("shake");
+                        $('.password').effect("shake", {distance : 3});
 
                     } else{
                         $('#chkNotice').html('비밀번호 일치함<br><br>');
