--- a/page/templates/base.html
+++ b/page/templates/base.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="{% block link %} {% endblock %}">
     <title>{% block title %}{% endblock %}</title>
-    <script src="//code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+{#    <script src="//code.jquery.com/jquery-1.12.4.js"></script>#}
+{#    <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>#}
     <script>
         function loginwarning(){
             alert('로그인 후 이용가능한 서비스입니다');
